--- a/rochework.conf
+++ b/rochework.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
 	ServerName roche.work
-        ServerAlias www.roche.work
+        ServerAlias *.roche.work
 
 	ServerAdmin roche@usna.edu
 	DocumentRoot /home/roche/web
